add possibility to configure traefik, tunnel and dnsmasq listen address and port

--- a/assets/templates/docker-compose/common-services/docker-compose.yml
+++ b/assets/templates/docker-compose/common-services/docker-compose.yml
@@ -8,16 +8,16 @@ services:
     container_name: traefik
     image: {{ default "traefik" .reward_traefik_image }}:{{ default "2.2" .reward_traefik_version }}
     ports:
-      - "{{ default "127.0.0.1" $reward_traefik_listen }}:{{ default "80" .reward_traefik_http_port }}:{{ default "80" .reward_traefik_http_port }}"     # The HTTP port
-      - "{{ default "127.0.0.1" $reward_traefik_listen }}:{{ default "443" .reward_traefik_https_port }}:{{ default "443" .reward_traefik_https_port }}"   # The HTTPS port
+      - "{{ default "0.0.0.0" $reward_traefik_listen }}:{{ default "80" .reward_traefik_http_port }}:{{ default "80" .reward_traefik_internal_http_port }}"     # The HTTP port
+      - "{{ default "0.0.0.0" $reward_traefik_listen }}:{{ default "443" .reward_traefik_https_port }}:{{ default "443" .reward_traefik_internal_https_port }}"   # The HTTPS port
 {{- if .reward_traefik_bind_additional_http_ports -}}
 {{- range $i, $v := .reward_traefik_bind_additional_http_ports }}
-      {{- printf `- "%s:%d:%d"` (default "127.0.0.1" $reward_traefik_listen) $v $v | nindent 6 -}}
+      {{- printf `- "%s:%d:%d"` (default "0.0.0.0" $reward_traefik_listen) $v $v | nindent 6 -}}
 {{- end -}}
 {{- end -}}
 {{- if .reward_traefik_bind_additional_https_ports -}}
 {{- range $i, $v := .reward_traefik_bind_additional_https_ports }}
-      {{- printf `- "%s:%d:%d"` (default "127.0.0.1" $reward_traefik_listen) $v $v | nindent 6 -}}
+      {{- printf `- "%s:%d:%d"` (default "0.0.0.0" $reward_traefik_listen) $v $v | nindent 6 -}}
 {{- end -}}
 {{- end }}
     volumes:
@@ -61,10 +61,10 @@ services:
     image: {{ default "docker.io/rewardenv/dnsmasq" .reward_dnsmasq_image }}
     ports:
       {{ if isEnabled ( default false .reward_dnsmasq_bind_tcp ) }}
-      - "127.0.0.1:53:53/tcp"
+      - "{{ default "0.0.0.0" $reward_dnsmasq_listen }}:{{ default "53" .reward_dnsmasq_tcp_port }}:{{ default "53" .reward_dnsmasq_internal_tcp_port }}/tcp"
       {{ end }}
       {{ if isEnabled ( default true .reward_dnsmasq_bind_udp ) }}
-      - "127.0.0.1:53:53/udp"
+      - "{{ default "0.0.0.0" $reward_dnsmasq_listen }}:{{ default "53" .reward_dnsmasq_udp_port }}:{{ default "53" .reward_dnsmasq_internal_udp_port }}/udp"
       {{ end }}
     environment:
       REWARD_DNSMASQ_CONF: |-
@@ -188,7 +188,7 @@ services:
       - dev.reward.container.name=tunnel
       - dev.reward.environment.name=reward
     ports:
-      - "127.0.0.1:2222:22"
+      - "{{ default "0.0.0.0" $reward_tunnel_listen }}:{{ default "2222" .reward_tunnel_port }}:{{ default "22" .reward_tunnel_internal_port }}"
     volumes:
       - ./tunnel/ssh_key.pub:/etc/authorized_keys/user
       - sshd_keys:/etc/ssh/keys
