add dependency checking scripts

--- a/images/php-fpm/debian/shopware-web/Dockerfile
+++ b/images/php-fpm/debian/shopware-web/Dockerfile
@@ -47,12 +47,13 @@ RUN set -eux \
     && wget -q -O - https://nginx.org/keys/nginx_signing.key | apt-key add - \
     && apt-get update && apt-get install -y --no-install-recommends \
        nginx \
+       netcat \
        shellinabox \
     && rm -rf /var/lib/apt/lists/* /var/log/apt \
     && usermod -aG $GID nginx \
     && rm -f /etc/supervisor/supervisord.conf.dpkg-dist \
     && mkdir -p /etc/supervisor/conf.d \
-    && chmod +x /usr/local/bin/install-shopware.sh /usr/local/bin/stop-supervisor.sh \
+    && chmod +x /usr/local/bin/check-dependencies.sh /usr/local/bin/install-shopware.sh /usr/local/bin/stop-supervisor.sh \
     && chown -R www-data: /etc/supervisor /etc/nginx /etc/php /var/log/nginx /var/cache/nginx /var/lib/php \
     && chmod +x /docker-entrypoint.sh
 #  && ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
