update support for ubuntu-lunatic

--- a/.github/workflows/dev-docker-image-php-fpm.yml
+++ b/.github/workflows/dev-docker-image-php-fpm.yml
@@ -21,7 +21,7 @@ jobs:
       name: develop
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
         #        include:
         #          - docker_base_images: "debian-bookworm"
