--- a/.github/workflows/main-docker-image-php-fpm-xdebug3.yml
+++ b/.github/workflows/main-docker-image-php-fpm-xdebug3.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "xdebug3" ]
     #        include:
