--- a/.github/workflows/dev-docker-image-php-fpm-magento1.yml
+++ b/.github/workflows/dev-docker-image-php-fpm-magento1.yml
@@ -6,12 +6,6 @@ on:
     branches: [ develop ]
     types:
       - completed
-  push:
-    paths:
-      - images/php-fpm/context/magento1/**
-      - images/php-fpm/*/magento1/**
-    branches:
-      - develop
 jobs:
   magento1:
     name: Magento 1 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -20,7 +14,7 @@ jobs:
       name: develop
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "magento1" ]
     #        include:
