--- a/.github/workflows/dev-docker-image-php-fpm-shopware.yml
+++ b/.github/workflows/dev-docker-image-php-fpm-shopware.yml
@@ -6,12 +6,6 @@ on:
     branches: [ develop ]
     types:
       - completed
-  push:
-    paths:
-      - images/php-fpm/context/shopware/**
-      - images/php-fpm/*/shopware/**
-    branches:
-      - develop
 jobs:
   shopware:
     name: Shopware - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
@@ -20,7 +14,7 @@ jobs:
       name: develop
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
         php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "shopware" ]
     #        include:
