--- a/.github/workflows/main-docker-image-php-fpm-magento2.yml
+++ b/.github/workflows/main-docker-image-php-fpm-magento2.yml
@@ -6,19 +6,13 @@ on:
     branches: [ main ]
     types:
       - completed
-  push:
-    paths:
-      - images/php-fpm/context/magento2/**
-      - images/php-fpm/*/magento2/**
-    branches:
-      - main
 jobs:
   magento2:
     name: Magento 2 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
         php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "magento2" ]
     #        include:
