--- a/.github/workflows/main-docker-image-php-fpm-shopware.yml
+++ b/.github/workflows/main-docker-image-php-fpm-shopware.yml
@@ -6,19 +6,13 @@ on:
     branches: [ main ]
     types:
       - completed
-  push:
-    paths:
-      - images/php-fpm/context/shopware/**
-      - images/php-fpm/*/shopware/**
-    branches:
-      - main
 jobs:
   shopware:
     name: Shopware - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
         php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "shopware" ]
     #        include:
