--- a/.github/workflows/main-docker-image-php-fpm.yml
+++ b/.github/workflows/main-docker-image-php-fpm.yml
@@ -6,20 +6,13 @@ on:
     branches: [ main ]
     types:
       - completed
-  push:
-    paths:
-      - images/php-fpm/.trigger
-      - images/php-fpm/context/rootfs/**
-      - images/php-fpm/*/_base/**
-    branches:
-      - main
 jobs:
   php-fpm:
     name: FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunatic" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
         php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
         #        include:
         #          - docker_base_images: "debian-bookworm"
