update workflow dependency graph

--- a/.github/workflows/main-docker-image-php-fpm-magento1.yml
+++ b/.github/workflows/main-docker-image-php-fpm-magento1.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   magento1:
     name: Magento 1 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
