--- a/.github/workflows/dev-docker-image-php-fpm-magento2-web.yml
+++ b/.github/workflows/dev-docker-image-php-fpm-magento2-web.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   magento2-web:
     name: Magento 2 WEB - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment:
       name: develop
