--- a/.github/workflows/main-docker-image-php-fpm-blackfire.yml
+++ b/.github/workflows/main-docker-image-php-fpm-blackfire.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   blackfire:
     name: Blackfire - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
