--- a/.github/workflows/main-docker-image-php-fpm-magento2.yml
+++ b/.github/workflows/main-docker-image-php-fpm-magento2.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   magento2:
     name: Magento 2 - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
