--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.go'
+      - go.mod
+      - go.sum
   pull_request:
 
 permissions:
