--- a/.github/workflows/dev-docker-image-php-fpm-shopware-web.yml
+++ b/.github/workflows/dev-docker-image-php-fpm-shopware-web.yml
@@ -15,7 +15,7 @@ jobs:
       name: develop
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy" ]
         php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "shopware-web" ]
     #        include:
