--- a/.github/workflows/main-docker-image-php-fpm-magento2.yml
+++ b/.github/workflows/main-docker-image-php-fpm-magento2.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy" ]
         php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "magento2" ]
     #        include:
