--- a/.github/workflows/main-docker-image-php-fpm-shopware.yml
+++ b/.github/workflows/main-docker-image-php-fpm-shopware.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "ubuntu-lunar" ]
+        docker_base_images: [ "debian-bullseye", "ubuntu-jammy" ]
         php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "shopware" ]
     #        include:
