--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -1,29 +1,27 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow
-
+---
 name: "Spelling"
 
 on:
-    pull_request: null
-    push:
-        branches:
-        - "main"
+  pull_request: null
+  push:
+    branches:
+      - "main"
 
 permissions:
-    contents: "read"
+  contents: "read"
 
 concurrency:
-    group: "${{ github.workflow }}-${{ github.ref }}"
-    cancel-in-progress: true
+  group: "${{ github.workflow }}-${{ github.ref }}"
+  cancel-in-progress: true
 
 jobs:
-    typos_check:
-        name: "文A Typos check"
-        runs-on: "ubuntu-22.04"
-        timeout-minutes: 1
-        steps:
-        -
-            name: "Checkout repository"
-            uses: "actions/checkout@v3"
-        -
-            name: "Search for misspellings"
-            uses: "crate-ci/typos@master"
+  typos_check:
+    name: "文A Typos check"
+    runs-on: "ubuntu-22.04"
+    timeout-minutes: 1
+    steps:
+      - name: "Checkout repository"
+        uses: "actions/checkout@v3"
+      - name: "Search for misspellings"
+        uses: "crate-ci/typos@master"
