--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
-[{Makefile,go.mod,go.sum,*.go,.gitmodules}]
+[{Makefile,go.mod,go.sum,*.go,.gitmodules,wp-config.php}]
 indent_style = tab
 indent_size = 4
 
