--- a/.github/workflows/main-sonarcloud.yml
+++ b/.github/workflows/main-sonarcloud.yml
@@ -19,3 +19,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        if: ${{ env.SONAR_TOKEN }}
