--- a/.editorconfig
+++ b/.editorconfig
@@ -3,11 +3,12 @@ root = true
 [*]
 insert_final_newline = true
 charset = utf-8
+end_of_line = lf
 trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
-[{Makefile,go.mod,go.sum,*.go,.gitmodules}]
+[{Makefile,go.mod,go.sum,*.go,.gitmodules,wp-config.php}]
 indent_style = tab
 indent_size = 4
 
