--- a/.github/workflows/main-lint-dockerfile.yml
+++ b/.github/workflows/main-lint-dockerfile.yml
@@ -3,7 +3,7 @@ name: Lint Dockerfile
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request: null
 
 permissions:
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Install Compose
+      - name: Run Hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
           recursive: "true"
