Ignore latest versions

--- a/.github/workflows/main-lint-dockerfile.yml
+++ b/.github/workflows/main-lint-dockerfile.yml
@@ -19,3 +19,4 @@ jobs:
         uses: hadolint/hadolint-action@v3.1.0
         with:
           recursive: "true"
+          ignore: DL3007,DL3008,DL3018
