--- a/images/magepack/2.3/Dockerfile
+++ b/images/magepack/2.3/Dockerfile
@@ -10,6 +10,6 @@ RUN set -eux \
     && npm install -g magepack@^2.3 \
     && npm cache clean --force
 
-CMD tail -f /dev/null
+CMD ["tail", "-f", "/dev/null"]
 
 USER chrome
