--- a/images/opensearch-dashboards/1.3/Dockerfile
+++ b/images/opensearch-dashboards/1.3/Dockerfile
@@ -2,4 +2,4 @@ FROM opensearchproject/opensearch-dashboards:1.3.7
 
 RUN set -eux \
     && /usr/share/opensearch-dashboards/bin/opensearch-dashboards-plugin remove securityDashboards \
-    && echo -e "server.host: '0'\nopensearch.hosts: [https://localhost:9200]" > /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
+    && printf '%s\n%s\n' "server.host: '0'" "opensearch.hosts: [https://localhost:9200]" > /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
