fix: update typos config to ignore xdebug ids

--- a/.typos.toml
+++ b/.typos.toml
@@ -1,3 +1,6 @@
 [default.extend-identifiers]
 # https://manpages.debian.org/bookworm/manpages-dev/open.2.en.html#File_access_mode
 "O_WRONLY" = "O_WRONLY"
+
+[files]
+extend-exclude = ["docs/configuration/xdebug.md"]
