pin goreleaser version

--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
-          version: latest
+          version: ~> 1.18
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
