--- a/images/php-fpm/debian-bullseye/magento2-web/Dockerfile
+++ b/images/php-fpm/debian-bullseye/magento2-web/Dockerfile
@@ -53,7 +53,7 @@ RUN set -eux \
     && usermod -aG $GID nginx \
     && rm -f /etc/supervisor/supervisord.conf.dpkg-dist \
     && mkdir -p /etc/supervisor/conf.d \
-    && chmod +x /usr/local/bin/check-dependencies.sh /usr/local/bin/install-magento2.sh /usr/local/bin/stop-supervisor.sh \
+    && chmod +x /usr/local/bin/check-dependencies.sh /usr/local/bin/install.sh /usr/local/bin/stop-supervisor.sh \
     && chown -R www-data: /etc/supervisor /etc/nginx /etc/php /var/log/nginx /var/cache/nginx /var/lib/php \
     && chmod +x /docker-entrypoint.sh
 #    && ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
