--- a/images/php-fpm/debian-bullseye-rootless/context/wordpress-web/rootfs/etc/supervisor/available.d/gotty.conf.template
+++ b/images/php-fpm/debian-bullseye-rootless/context/wordpress-web/rootfs/etc/supervisor/available.d/gotty.conf.template
@@ -1,5 +1,5 @@
-[program:shellinabox]
-command=/usr/bin/shellinaboxd --port 4200 --no-beep --disable-ssl --user www-data --group www-data
+[program:gotty]
+command=/usr/bin/gotty --port 4200 --permit-write --credential admin:password /bin/bash
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
