--- a/assets/templates/docker-compose/environments/includes/varnish.base.yml
+++ b/assets/templates/docker-compose/environments/includes/varnish.base.yml
@@ -64,7 +64,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-varnish.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-varnish.priority=9
       - traefik.http.routers.{{ .reward_env_name }}-varnish.rule=
-          HostRegexp(`{subdomain:.+}.{{ .traefik_domain }}`) || Host(`{{ .traefik_domain }}`)
+          HostRegexp(`{subdomain:.+}.{{ .traefik_domain }}`) || Host(`{{ .traefik_domain }}`) {{ if .traefik_extra_hosts }} || {{$first := true}}{{ range (splitList " " .traefik_extra_hosts) }}{{ if $first }}{{ $first = false }}{{ else }} || {{ end }}Host(`{{ . }}`){{ end }}{{ end }}
       - traefik.http.services.{{ .reward_env_name }}-varnish.loadbalancer.server.port=80
       - traefik.docker.network={{ .reward_env_name }}_default
       - dev.reward.container.name=varnish
