--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,11 @@ sphinx:
 formats:
   - pdf
 python:
-  version: 3.7
+  version: 3.12
   install:
     - requirements: docs/requirements.txt
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
