--- a/images/nginx/context/rootfs/etc/nginx/conf.d/default.conf.template
+++ b/images/nginx/context/rootfs/etc/nginx/conf.d/default.conf.template
@@ -13,11 +13,40 @@ map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie
     default {{ getenv "NGINX_UPSTREAM_DEBUG_HOST" "php-debug" }}:{{ getenv "NGINX_UPSTREAM_DEBUG_PORT" "9000" }};
 }
 
+{{- $default_exists := false }}
+{{- range $i := ( math.Seq 0 99 ) }}
+{{- $varname := printf "NGINX_HOST_MAPPING_%v" $i }}
+{{- range $key, $value := ( strings.Split ":" ( getenv $varname ) ) }}
+{{- if eq $value "default" }}
+{{- $default_exists = true -}}
+{{- end }}
+{{- end }}
+{{- end }}
+
 map $http_host $MAGE_RUN_CODE {
+{{- range $i := ( math.Seq 0 99 ) }}
+{{- $varname := printf "NGINX_HOST_MAPPING_%v" $i }}
+{{- $vals :=  ( strings.Split ":" ( getenv $varname ) ) }}
+{{- $length := len $vals }}{{- if not ( eq $length 3 ) }}{{- continue }}
+{{- end }}
+    {{ index $vals 0 }} {{ index $vals 1 }};
+{{- end }}
+{{- if not $default_exists }}
     default "";
+{{- end }}
 }
+
 map $http_host $MAGE_RUN_TYPE {
+{{- range $i := ( math.Seq 0 99 ) }}
+{{- $varname := printf "NGINX_HOST_MAPPING_%v" $i }}
+{{- $vals :=  ( strings.Split ":" ( getenv $varname ) ) }}
+{{- $length := len $vals }}{{- if not ( eq $length 3 ) }}{{- continue }}
+{{- end }}
+    {{ index $vals 0 }} {{ index $vals 2 }};
+{{- end }}
+{{- if not $default_exists }}
     default "";
+{{- end }}
 }
 
 map $http_x_forwarded_proto $fastcgi_https {
