use ssmtp instead of mhsendmail

--- a/images/php-fpm/context/rootfs/etc/php/mods-available/docker.ini.template
+++ b/images/php-fpm/context/rootfs/etc/php/mods-available/docker.ini.template
@@ -25,7 +25,4 @@ date.timezone = {{ getenv "PHP_DATE_TIMEZONE" "UTC" }}
 zend.assertions = {{ getenv "PHP_ZEND_ASSERTIONS" "1" }}
 
 [mail function]
-{{- $mailhog_host := (getenv "MAILHOG_HOST" "mailhog") -}}
-{{- $mailhog_port := (getenv "MAILHOG_PORT" "1025") -}}
-{{- $sendmail_path_default := print "/usr/local/bin/mhsendmail -t --smtp-addr='" $mailhog_host ":" $mailhog_port "'" }}
-sendmail_path = "{{ getenv "PHP_SENDMAIL_PATH" (print $sendmail_path_default) }}"
+sendmail_path = "{{ getenv "PHP_SENDMAIL_PATH" "/usr/sbin/sendmail -t -i" }}"
