--- a/images/php-fpm/debian-bullseye/_base/Dockerfile
+++ b/images/php-fpm/debian-bullseye/_base/Dockerfile
@@ -3,17 +3,6 @@ ARG IMAGE_BASE="debian-bullseye"
 ARG PHP_VERSION
 ARG PHP_VARIANT="fpm-loaders"
 
-FROM golang:1.15 AS builder
-
-RUN set -eux \
-    && if [ "$(dpkg --print-architecture)" = "arm64" ]; \
-        then BUILD_ARCH="arm64"; \
-        else BUILD_ARCH="amd64"; \
-    fi \
-    && go get -d -v github.com/mailhog/mhsendmail \
-    && cd /go/src/github.com/mailhog/mhsendmail/ \
-    && GOOS=linux GO_ARCH=$BUILD_ARCH go build -o mhsendmail .
-
 FROM ${IMAGE_NAME}:${PHP_VERSION}-${PHP_VARIANT}-${IMAGE_BASE}
 
 ARG PHP_VERSION
@@ -27,18 +16,20 @@ ENV MAILHOG_PORT    1025
 ENV NODE_VERSION    16
 
 COPY rootfs/. /
-COPY --from=builder /go/src/github.com/mailhog/mhsendmail/mhsendmail /usr/local/bin/
 
 RUN set -eux \
     && apt-get update && apt-get install -y --no-install-recommends \
     autoconf \
     automake \
     bash-completion \
+    bsd-mailx \
     cron \
     default-mysql-client \
     dnsutils \
     less \
     jq \
+    msmtp \
+    msmtp-mta \
     nano \
     python3-pip \
     pwgen \
@@ -48,8 +39,6 @@ RUN set -eux \
     vim \
     wget \
     && rm -rf /var/lib/apt/lists/* /var/log/apt \
-    && chmod +x /usr/local/bin/mhsendmail \
-    && ln -sf /usr/local/bin/mhsendmail /usr/sbin/sendmail \
     # Install awscli to support data backfill workflows using S3 storage
     && pip3 install --upgrade pip \
     && pip3 install awscli --no-cache-dir \
