--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -12,3 +12,5 @@ jobs:
           stale-issue-message: 'This issue is stale because it has been open 14 days with no activity. Remove stale label or comment or this will be closed in 5 days.'
           days-before-stale: 14
           days-before-close: 5
+          exempt-all-assignees: true
+          exempt-issue-labels: bug,question
