chg(*): update goreleaser

--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -20,9 +20,9 @@ jobs:
         with:
           go-version: 1.19
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v5
         with:
-          version: ~> 1.18
+          version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
