chg(*): update go version

--- a/.dev.goreleaser.yml
+++ b/.dev.goreleaser.yml
@@ -71,7 +71,7 @@ nfpms:
     rpm:
       compression: lzma
 brews:
-  - tap:
+  - repository:
       owner: rewardenv
       name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
