chg(*): update go version

--- a/.dev.goreleaser.yml
+++ b/.dev.goreleaser.yml
@@ -25,7 +25,7 @@ archives:
     name_template: |
       {{- .ProjectName -}}_
       {{- title .Os -}}_
-      {{- if and (eq .Os "Linux") (eq .Arch "arm64") -}}aarch64
+      {{- if and (eq .Os "linux") (eq .Arch "arm64") -}}aarch64
       {{- else if eq .Arch "amd64" -}}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{- .Arch -}}
@@ -52,7 +52,7 @@ nfpms:
     file_name_template: |
       {{- .ProjectName -}}_
       {{- title .Os -}}_
-      {{- if and (eq .Os "Linux") (eq .Arch "arm64") -}}aarch64
+      {{- if and (eq .Os "linux") (eq .Arch "arm64") -}}aarch64
       {{- else if eq .Arch "amd64" -}}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{- .Arch -}}
