--- a/assets/templates/docker-compose/environments/includes/allure.base.yml
+++ b/assets/templates/docker-compose/environments/includes/allure.base.yml
@@ -1,6 +1,5 @@
 {{- /* @formatter:off */ -}}
 
-version: "3.5"
 services:
   allure:
     hostname: "{{ .reward_env_name }}-allure"
@@ -14,7 +13,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-allure.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-allure.rule=Host(`allure.{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-allure.loadbalancer.server.port=4040
-      - traefik.docker.network={{ .reward_env_name }}_default
+      - traefik.docker.network={{ .reward_env_name }}
       - dev.reward.container.name=allure
       - dev.reward.environment.name={{ .reward_env_name }}
       # TODO; configure the Allure API; these rules result in allure sub-domain no longer routing
