--- a/assets/templates/docker-compose/environments/includes/elasticsearch.base.yml
+++ b/assets/templates/docker-compose/environments/includes/elasticsearch.base.yml
@@ -1,6 +1,5 @@
 {{- /* @formatter:off */ -}}
 
-version: "3.5"
 services:
   elasticsearch:
     hostname: "{{ .reward_env_name }}-elasticsearch"
@@ -14,7 +13,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-elasticsearch.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-elasticsearch.rule=Host(`elasticsearch.{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-elasticsearch.loadbalancer.server.port=9200
-      - traefik.docker.network={{ .reward_env_name }}_default
+      - traefik.docker.network={{ .reward_env_name }}
       - dev.reward.container.name=elasticsearch
       - dev.reward.environment.name={{ .reward_env_name }}
     environment:
