--- a/assets/templates/docker-compose/environments/includes/mercure.base.yml
+++ b/assets/templates/docker-compose/environments/includes/mercure.base.yml
@@ -1,6 +1,5 @@
 {{- /* @formatter:off */ -}}
 
-version: "3.5"
 {{ if isEnabled ( default false .reward_mercure ) }}
 services:
   mercure:
@@ -23,7 +22,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-mercure.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-mercure.rule=Host(`{{ .traefik_domain }}`) && PathPrefix(`/.well-known/mercure`)
       - traefik.http.services.{{ .reward_env_name }}-mercure.loadbalancer.server.port=80
-      - traefik.docker.network={{ .reward_env_name }}_default
+      - traefik.docker.network={{ .reward_env_name }}
       - dev.reward.container.name=mercure
       - dev.reward.environment.name={{ .reward_env_name }}
     hostname: mercure
