--- a/assets/templates/docker-compose/environments/includes/networks.base.yml
+++ b/assets/templates/docker-compose/environments/includes/networks.base.yml
@@ -1,8 +1,8 @@
 {{- /* @formatter:off */ -}}
 
-version: "3.5"
 networks:
   default:
+    name: {{ .reward_env_name }}
     labels:
       - dev.reward.environment.name={{ .reward_env_name }}
       - dev.reward.environment.type={{ .reward_env_type }}
