--- a/assets/templates/docker-compose/environments/includes/nginx.base.yml
+++ b/assets/templates/docker-compose/environments/includes/nginx.base.yml
@@ -1,7 +1,6 @@
 {{- /* @formatter:off */ -}}
 
-version: "3.5"
-  {{ if not ( isEnabled ( default false .reward_single_web_container )) }}
+{{ if not ( isEnabled ( default false .reward_single_web_container )) }}
 services:
   nginx:
     hostname: "{{ .reward_env_name }}-nginx"
@@ -21,7 +20,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-nginx.rule=
         HostRegexp(`{subdomain:.+}.{{ .traefik_domain }}`) || Host(`{{ .traefik_domain }}`) {{ if .traefik_extra_hosts }} || {{$first := true}}{{ range (splitList " " .traefik_extra_hosts) }}{{ if $first }}{{ $first = false }}{{ else }} || {{ end }}Host(`{{ . }}`){{ end }}{{ end }}
       - traefik.http.services.{{ .reward_env_name }}-nginx.loadbalancer.server.port=80
-      - traefik.docker.network={{ .reward_env_name }}_default
+      - traefik.docker.network={{ .reward_env_name }}
       - dev.reward.container.name=nginx
       - dev.reward.environment.name={{ .reward_env_name }}
     volumes:
@@ -29,4 +28,4 @@ services:
       - ./{{ default ".reward/nginx" .nginx_custom_configs_path }}:/etc/nginx/snippets
     environment:
       - XDEBUG_CONNECT_BACK_HOST=${XDEBUG_CONNECT_BACK_HOST:-''}
-  {{ end }}
+{{ end }}
