--- a/assets/templates/docker-compose/environments/magento2/magento2.base.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.base.yml
@@ -1,6 +1,5 @@
 {{- /* @formatter:off */ -}}
 
-version: "3.5"
 services:
 {{ if not ( isEnabled ( default false .reward_single_web_container )) }}
   nginx:
@@ -26,7 +25,7 @@ services:
             && (Path(`/livereload.js`) || Path(`/livereload`))
       - traefik.http.routers.{{ .reward_env_name }}-livereload.service={{ .reward_env_name }}-livereload
       - traefik.http.services.{{ .reward_env_name }}-livereload.loadbalancer.server.port=35729
-      - traefik.docker.network={{ .reward_env_name }}_default
+      - traefik.docker.network={{ .reward_env_name }}
       - dev.reward.container.name=php-fpm
       - dev.reward.environment.name={{ .reward_env_name }}
     environment:
